package western.personnages;

import western.grammaire.Substantif;

public class Brigand {
    public Brigand(String nom, Substantif substantif){

    }

    public Brigand(String nom){

    }

    public String sePresenter(){

    }

    public String sePresenter(Dame dame){

    }

    public String kidnapper(Dame dame){

    }

    public String seFaireTirerDessus(){

    }

    public String estCapture(){

    }

    public Integer getPrime(){

    }

    public String getPseudo(){

    }



}
