package western.personnages;

import western.grammaire.Substantif;

public class Cowboy {

    public Cowboy(String nom){

    }

    public Cowboy(String nom, Substantif substantif){

    }

    public String sePresenter(){

    }

    public String tirerSur(Brigand brigand){

    }

    public String capturer(Brigand brigand){

    }

    public String liberer(Dame dame){

    }

    public String getPseudo(){

    }
}
