package western.personnages;

public class Dame extends Personnage{
    public Dame(String name) {
        super(name); // Or whatever parameters Personnage needs
    }


}
